--- a/css/style.css
+++ b/css/style.css
@@ -849,3 +849,20 @@ transform:rotate(45deg);
         width: 100%;
     }
 }
+
+#loader-wrapper2 .sk-folding-cube .sk-cube:before {
+    background-color: #fff;}
+#loader-wrapper2 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 100000;
+    display:none;
+    background:rgba(96,55,176,0.5)
+}
+
+ .loading #loader-wrapper2 {
+     display:block;
+     visibility: visible;}
