--- a/css/style.css
+++ b/css/style.css
@@ -844,7 +844,7 @@ transform:rotate(45deg);
     background-image: url("../img/plus2.png");
 }
 
-@media all and (min-width: 320px) and (max-width: 700px) {
+@media all and (min-width: 320px) and (max-width: 768px) {
     .ss-form {
         width: 100%;
     }
@@ -866,3 +866,64 @@ transform:rotate(45deg);
  .loading #loader-wrapper2 {
      display:block;
      visibility: visible;}
+
+
+/**Modal***/
+
+.modal {
+  text-align: center;
+  padding: 0;
+}
+
+.modal:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  margin-right: -4px;
+}
+
+.modal-dialog {
+  display: inline-block;
+  text-align: left;
+  vertical-align: middle;
+}
+
+.modal-content {
+    border-radius:0;
+}
+
+.modal-header,
+.modal-footer{
+    padding:25px 30px;
+}
+
+.modal-body{
+    padding: 20px 30px 25px;
+}
+
+.modal-footer .btn{
+    margin-bottom: 0;
+    margin-top: 0;
+}
+
+.modal-body p:last-child{
+    margin-bottom: 0;
+}
+
+body.modal-open{
+    padding-right: 0 !important;
+}
+
+body .modal-open {
+    overflow: auto;
+ }
+@media screen and (max-width:768px){
+    .modal-open .modal{overflow-y:auto;}
+    .modal:before { height: auto;}
+}
+.modal-block .modal-header{border:0;padding:0;position:relative}
+.modal-block .modal-text{text-align:center;font-size:22px;font-weight:500;padding:20px 20px 40px 20px;}
+.modal-block .close{width:34px;height:34px;background:#6037b0;color:#fff;opacity: 1 !important;border-radius:100%;position:absolute;right:-10px;top:-10px;}
+.modal-block .modal-content{border:0;box-shadow: 0 0 0;border-bottom:solid #cfcfcf 4px;border-radius:8px;}
+.modal-block .modal-backdrop{background:#6037b0}
